[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "linien-gateway"
version = "0.1.0"
description = "FastAPI gateway for multi-device Linien control"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "psycopg[binary]>=3.2",
  "linien-client==2.1.0",
  "linien-common==2.1.0",
  "numpy>=2.0",
  "orjson>=3.10",
]

[project.scripts]
linien-gateway = "app.main:main"

[tool.setuptools.packages.find]
namespaces = false

# linien-common/linien-client 2.1.0 pin numpy<2, which conflicts with the
# numpy>=2.0 dependency above. This override reconciles it, but it is uv-only:
# a plain `pip install .` does NOT honor it and fails to resolve. Install the
# gateway with uv (see the README), or relax the numpy pin to <2 if you must
# use pip.
[tool.uv]
override-dependencies = [
  "numpy>=2",
]
